Add variant support in a few more places

--- a/app/views/members/show_details.html.erb
+++ b/app/views/members/show_details.html.erb
@@ -82,7 +82,7 @@
         <% else %>
           Not rotating
         <% end %>
-        <br><%= ms.set_member_instruments[0].member_instrument.instrument.capitalize %>
+        <br><%= ms.set_member_instruments[0].instrument_name_with_variant.capitalize %>
       <% end %>
 
       <br><br>
