--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -93,11 +93,7 @@
         <% else %>
           Not rotating
         <% end %>
-        <% if ms.set_member_instruments[0].variant %>
-          <br><%= ms.set_member_instruments[0].variant.capitalize %>
-        <% else %>
-          <br><%= ms.set_member_instruments[0].member_instrument.instrument.capitalize %>
-        <% end %>
+        <br><%= ms.set_member_instruments[0].instrument_name_with_variant.capitalize %>
       <% end %>
       <br><br>
 
