--- a/app/views/absences/index.html.erb
+++ b/app/views/absences/index.html.erb
@@ -2,6 +2,14 @@
 
 <div class='listDescription'>
   <%= select_tag :sets, options_for_select(@performance_sets, selected: @performance_set), id: 'setSelectorAbsence' %>
+  &nbsp;&emsp;&nbsp;&middot;&nbsp;&emsp;&nbsp;
+  <% if @showing_all %>
+    Showing All Members Interested in <%= @performance_sets[@performance_set.to_i][0] %>&nbsp;&emsp;&nbsp;&middot;&nbsp;&emsp;&nbsp;
+    <b><%= link_to "Show only confirmed members", absences_path(:set => @performance_set_id) %></b>
+  <% else %>
+    Showing Only Confirmed Playing Members in  <%= @performance_sets[@performance_set.to_i][0] %>&nbsp;&emsp;&nbsp;&middot;&nbsp;&emsp;&nbsp;
+    <b><%= link_to "Show All Members", absences_path(:all => "true", :set => @performance_set_id) %></b>
+  <% end %>
 </div>
 
 <% if @performance_set %>
