Add new member form fields

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -328,6 +328,14 @@ div {
   border-left: 1px solid #ccc;
 }
 
+.member_custom_source_box {
+  display: none;
+}
+
+.member_custom_source_box_full {
+  display: block;
+}
+
 .edit_absence {
   display: none;
   margin-left: 40px;
