--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -73,7 +73,7 @@
           <strong>Member's Introduction:</strong><br>
           <%= @member.introduction %><br><br>
           <strong>User who replied:</strong>
-          <% if @member.reply_user_id) %>
+          <% if @member.reply_user_id %>
             <%= User.find(@member.reply_user_id).name %>
           <% end %><br>
           <strong>Source:</strong>
