--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -71,9 +71,9 @@
           <strong>Reply Date:</strong>
           <%= @member.contact_reply_date %><br>
           <strong>Member's Introduction:</strong><br>
-          <%= @member.introduction %><br><br>
+          <%= simple_format(@member.introduction) %><br><br>
           <strong>User who replied:</strong>
-          <% if @member.reply_user_id %>
+          <% if @member.reply_user_id > 0 %>
             <%= User.find(@member.reply_user_id).name %>
           <% end %><br>
           <strong>Source:</strong>
