--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
   <%= link_to 'View Performance Set List', performance_sets_path %>
 
   <br><br>
-  <b>Absences <sup style='color: red'>NEW!</sup></b>
+  <b>Absences</b>
   <br><br>
   <%= link_to 'View Absences', absences_path %><br>
   <%= link_to 'Record new Absence', new_absence_path %>
@@ -28,6 +28,12 @@
   <br><br>
   <%= link_to 'View Ensemble List', ensembles_path %><br>
   <%= link_to 'Performance Set Rehearsal Dates', performance_set_dates_path %>
+
+  <br><br>
+  <b>Civic Chamber <sup style='color: red'>NEW!</sup></b>
+  <br><br>
+  <%= link_to 'View Community Nights List', community_nights_path %><br>
+
 
   <% if current_user.global_admin? %>
     <br><br>
