--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -73,7 +73,7 @@
           <strong>Member's Introduction:</strong><br>
           <%= simple_format(@member.introduction) %><br><br>
           <strong>User who replied:</strong>
-          <% if @member.reply_user_id > 0 %>
+          <% if @member.reply_user_id && @member.reply_user_id > 0 %>
             <%= User.find(@member.reply_user_id).name %>
           <% end %><br>
           <strong>Source:</strong>
