--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
   <%= link_to 'Performance Set Rehearsal Dates', performance_set_dates_path %>
 
   <br><br>
-  <b>Civic Chamber <sup style='color: red'>NEW!</sup></b>
+  <b>Civic Chamber</b>
   <br><br>
   <%= link_to 'View Community Nights List', community_nights_path %><br>
 
