--- a/app/views/performance_sets/roster.html.erb
+++ b/app/views/performance_sets/roster.html.erb
@@ -1,3 +1,4 @@
+<% @instrument_groups = organize_members_by_instrument(@performance_set, @member_sets) %>
 <div class='pageHeader'><h2>Roster for <%= @performance_set.extended_name %></h2></div>
 
 <div class='listDescription'>
@@ -11,17 +12,15 @@
 <% end %>
 
 </div>
+<br>
+Total members listed in roster: <%= @instrument_groups.values.flatten.count %>
 
 <% @instrument_groups.keys.sort.each do |k, i| %>
   <% j = 0 %>
-  <% ig = k %>
-  <h4><%= ig.capitalize %></h4>
-  <% @instrument_groups[ig].each do |ms| %>
-    <% perf_set_inst = @performance_set_instruments.find_by(instrument: ig) %>
+  <h4><%= k.capitalize.pluralize %> (<%= (@instrument_groups[k].count) %>)</h4>
+  <% @instrument_groups[k].each do |ms| %>
     <% if ms %>
-      <% j += 1 %>
       <%= link_to ms.member, ms.member %> <% if @showing_all %> &emsp;&emsp;&emsp;<i style='color: gray'><%= ms.set_status %></i> <% end %> <br>
     <% end %>
   <% end %>
-  <i><%= "#{pluralize(j, ig)}" %></i>
 <% end %>
