--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -40,12 +40,18 @@
     <%= f.collection_select :instruments, @instruments, :id, :instrument, { prompt: true }, { id: 'emailMemberInstrumentSelector', multiple: true } %>
   </div>
 
+  <%= f.hidden_field :user_id, value: current_user.id %>
+
   <h3>These Members Will Be Emailed</h3>
   <div id="roster">
-    <i>Please select a performance set and status.</i>
+    <% if action_name == 'edit' %>
+      <i>Please re-select a performance set, status, and instruments to save.</i>
+    <% else %>
+      <i>Please select a performance set and status.</i>
+    <% end %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Preview Email", { disabled: true } %>
+    <%= f.submit "Save and Preview Email", { disabled: true, id: 'email_preview_submit_button' } %>
   </div>
 <% end %>
