--- a/app/views/member_mailer/standard_member_email.html.erb
+++ b/app/views/member_mailer/standard_member_email.html.erb
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <p>
-      <%= @body %>.<br>
-    </p>
-    <hr>
-    <p>This email was sent by <%= @sending_user.name %> through our membership management system.
-       If you believe you have recieved this email in error, please contact them directly, or email membership@sfcivicsymphony.org.</p>
-  </body>
-</html>
+
+<p>
+  <%= @body %>.<br>
+</p>
+<hr>
+<p>You received this email because you <%= @status_text %> <%= @perf_set_name %> <%= @inst ? " playing #{@inst}" : "" %>.
+This email was sent by <%= @sending_user.name %> through our membership management system.
+    If you believe you have recieved this email in error, please contact them directly, or email membership@sfcivicsymphony.org.</p>
+<img src="<%= ping_email_logs_url %>?member_id=<%=@member_id%>&email_id=<%=@email_id%>" width="1" height="1">
