--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -170,6 +170,10 @@ div.actions input[type=submit] {
   font-weight: bold;
 }
 
+div.indentMe {
+  margin-left: 20px;
+}
+
 p, ol {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
