--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,10 +32,13 @@
   <%= link_to 'View Ensemble List', ensembles_path %><br>
   <%= link_to 'Performance Set Rehearsal Dates', performance_set_dates_path %>
 
-  <br><br>
-  <b>Civic Chamber</b>
-  <br><br>
-  <%= link_to 'View Community Nights List', community_nights_path %><br>
+  <% if current_user.id == 1 || current_user.id == 20 || current_user.id == 3 %>
+    <br><br>
+    <b>Emails! <sup style='color: red'>NEW!</sup></b>
+    <br><br>
+    <%= link_to 'Send New Email', new_email_path %><br>
+    <%= link_to 'View Emails', emails_path %><br>
+  <% end %>
 
 
   <% if current_user.global_admin? %>
