Fix some issues with opt in capitalization

--- a/app/views/members/partials/_member_set_pill.html.erb
+++ b/app/views/members/partials/_member_set_pill.html.erb
@@ -5,7 +5,7 @@
        next
      end
 
-     if member_set.set_status == 'Interested in playing this set' || member_set.set_status == 'Opted In for this set'
+     if member_set.set_status == 'Interested in playing this set' || member_set.set_status == 'Opted in for this set'
        class_name = 'interested'
      elsif member_set.set_status == 'Playing'
        class_name = 'playing'
