--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h1>CSASF <b>Membership Management System</b></h1>
+    <h1><%= image_tag "SFCMA_Mark_White.png", height: 60 %> <i>Membership Management System</i></h1>
     <div class='bar'>
       <% if user_signed_in? %>
         <div class='loginInfo'>
