--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,7 @@ body.top-anonymous {
     width: 50%;
     margin: -60px auto 0 auto;
     padding: 30px 10px;
+    box-shadow: 2px 2px 2px 1px rgba(0.3, 0.3, 0.3, 0.5);
 
     div.pageHeader {
       border-bottom: 1px solid $button-dark-blue;
