Add more email resiliency

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -94,7 +94,7 @@
 
 
       <div class="field">
-        <%= f.label :email_1, "Primary Email Address" %>
+        <%= f.label :email_1, "Primary Email Address (used in all emails from the system)" %>
         <%= f.text_field :email_1, size: 30 %>
       </div>
 
